# nazareth

./: .gitignore  Cargo.toml  README.md  flag.txt  quiche.py  requirements.txt  run.ps1  run.sh
docker/: Dockerfile
src/: config.py  main.py  main.rs  nazareth.py  nz_database.py
src/cogs/: admin.py  creds.py  easter_eggs.py  nz_sticky_db.py  osu.py  pin.py  ping.py  quiche.py  quiche.py.bak  quiche.py.no_use  sticky.py  verify.py
src/events/: dm_logger.py  on_message.py  sticky_event.py
src/services/: osu_service.py
src/services/osu/: osu_service.py
